Fix gallery button layout bug on mobile widths

--- a/themes/backslash/static/css/style.css
+++ b/themes/backslash/static/css/style.css
@@ -197,6 +197,7 @@ footer p {
 	text-decoration: none;
 	text-align: center;
 	width: 6em;
+	font-size: 0.75em;
 }
 
 .gallery-title {
